--- a/recipes/zephyr-7b-beta/sft/config_lora.yaml
+++ b/recipes/zephyr-7b-beta/sft/config_lora.yaml
@@ -1,5 +1,5 @@
 # Model arguments
-model_name_or_path: mistralai/Mistral-7B-v0.1
+model_name_or_path: HuggingFaceH4/zephyr-7b-beta
 torch_dtype: auto
 use_flash_attention_2: true
 
@@ -16,10 +16,10 @@ lora_target_modules:
 
 # Data training arguments
 dataset_mixer:
-  JanLilan/cf-text-datasetv2: 1.0
+  JanLilan/cf-text-regional: 1.0
 dataset_splits:
-- train_sft
-- test_sft
+- train
+- test
 preprocessing_num_workers: 12
 
 # SFT trainer config
