--- a/recipes/zephyr-7b-beta/sft/config_lora.yaml
+++ b/recipes/zephyr-7b-beta/sft/config_lora.yaml
@@ -2,7 +2,6 @@
 model_name_or_path: HuggingFaceH4/zephyr-7b-beta
 torch_dtype: auto
 use_flash_attention_2: true
-
 # LoRA arguments
 use_peft: true
 lora_r: 64
@@ -30,7 +29,7 @@ gradient_accumulation_steps: 128
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
-hub_model_id: zephyr-7b-sft-lora
+hub_model_id: zephyr-7b-cf-text-regional
 hub_strategy: every_save
 learning_rate: 2.0e-05
 log_level: info
@@ -40,7 +39,7 @@ lr_scheduler_type: cosine
 max_seq_length: 2048
 max_steps: -1
 num_train_epochs: 1
-output_dir: data/zephyr-7b-sft-lora
+output_dir: data/zephyr-7b-cf-text-regional
 overwrite_output_dir: true
 per_device_eval_batch_size: 8
 per_device_train_batch_size: 4
